--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,21 +1,28 @@
 pipeline {
     agent any
-
     stages {
-        stage('Build') {
+        stage('Clone Repository') {
             steps {
-                echo 'Building...'
+                git 'https://github.com/Faqs1/tubes_komputasi.git'
             }
         }
-        stage('Test') {
+        stage('Install Dependencies') {
             steps {
-                echo 'Testing...'
+                sh 'ansible-galaxy install -r requirements.yml'
             }
         }
-        stage('Deploy') {
+        stage('Run Ansible Playbook') {
             steps {
-                echo 'Deploying...'
+                ansiblePlaybook credentialsId: 'your-credentials-id', inventory: 'hosts', playbook: 'playbooks/mariadb.yml'
             }
+        }
+    }
+    post {
+        success {
+            echo 'Deployment successful!'
+        }
+        failure {
+            echo 'Deployment failed!'
         }
     }
 }
