--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Run Ansible Playbook') {
             steps {
-                ansiblePlaybook credentialsId: 'your-credentials-id', inventory: 'hosts', playbook: 'playbooks/mariadb.yml'
+                ansiblePlaybook credentialsId: 'your-credentials-id', inventory: 'hosts', playbook: 'mariadb.yml'
             }
         }
     }
