--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/Faqs1/tubes_komputasi.git'
+                git branch:'main', url:  'https://github.com/Faqs1/tubes_komputasi.git'
             }
         }
         stage('Install Dependencies') {
