--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Run Ansible Playbook') {
             steps {
-                ansiblePlaybook credentialsId: 'b6dc3518-4b6e-4774-a292-d5aeda03de68', inventory: 'hosts', playbook: 'mariadb.yml'
+                ansiblePlaybook credentialsId: 'mariadb-private-key', inventory: 'hosts', playbook: 'mariadb.yml'
             }
         }
     }
