--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,17 +3,17 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git 'https://github.com/username/repository.git'
+                git 'https://github.com/Faqs1/tubes_komputasi.git'
             }
         }
         stage('Install Dependencies') {
             steps {
-                sh 'ansible-galaxy install -r requirements.yml'
+                echo 'Testing...'
             }
         }
         stage('Run Ansible Playbook') {
             steps {
-                ansiblePlaybook credentialsId: 'your-credentials-id', inventory: 'hosts', playbook: 'playbooks/mariadb.yml'
+               echo 'Testing...'
             }
         }
     }
