--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         }
         stage('Run Ansible Playbook') {
             steps {
-               bat 'ansible-playbook playbooks/mariadb.yml -i hosts'
+               bat 'ansible-playbook mariadb.yml -i hosts'
             }
         }
     }
